Fix background gap in start page

--- a/src/app/start-game-page/start-game-page.component.scss
+++ b/src/app/start-game-page/start-game-page.component.scss
@@ -54,6 +54,10 @@ i.fa-futbol-o {
   height: 100%;
 }
 
+mat-grid-tile {
+  height: 20px;
+}
+
 .background-image {
   background-repeat: no-repeat;
   background-size: 230px;  
